While in X-ray display, selection made via lasso select does not display properly #63017

Closed
opened 2019-03-27 16:29:09 +01:00 by Chuck Ocheret · 10 comments

System Information
Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 560X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.8.38

Blender Version
Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-27 13:26, hash: 2d34420648
Worked: (optional)

Short description of error
While in X-ray display, selection made via lasso select does not display properly

Exact steps for others to reproduce the error
1 - Create a new general Blender file using the General template
2 - Delete everything in the scene
3 - Create a monkey mesh
4 - Turn on x-ray display
5 - Enter edit mode and make sure you're in vertex mode (I'm supplying a .blend file that starts at this state)LassoXrayBug.blend
6 - Lasso select (ctrl-right drag) part of Suzanne (say, the chin)
7 - Observe that nothing appears to be selected
8 - Enter circle select (C)
9 - Left drag the circle to any vertex
10 - Observe that the lasso select actually worked but was just not displaying

~chuck

**System Information** Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 560X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.8.38 **Blender Version** Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-27 13:26, hash: `2d34420648` Worked: (optional) **Short description of error** While in X-ray display, selection made via lasso select does not display properly **Exact steps for others to reproduce the error** 1 - Create a new general Blender file using the General template 2 - Delete everything in the scene 3 - Create a monkey mesh 4 - Turn on x-ray display 5 - Enter edit mode and make sure you're in vertex mode (I'm supplying a .blend file that starts at this state)[LassoXrayBug.blend](https://archive.blender.org/developer/F6891243/LassoXrayBug.blend) 6 - Lasso select (ctrl-right drag) part of Suzanne (say, the chin) 7 - **Observe that nothing appears to be selected** 8 - Enter circle select (C) 9 - Left drag the circle to any vertex 10 - **Observe that the lasso select actually worked but was just not displaying** ~chuck
Author

Added subscriber: @ChuckOcheret

Added subscriber: @ChuckOcheret

#63019 was marked as duplicate of this issue

#63019 was marked as duplicate of this issue
Author

This problem also occurs in edge select mode or face select mode. So in step 5 above, it is not essential to be in vertex select mode.

This problem also occurs in edge select mode or face select mode. So in step 5 above, it is not essential to be in vertex select mode.
Germano Cavalcante was assigned by Brecht Van Lommel 2019-03-27 19:25:42 +01:00

Added subscriber: @gentleclockdivider

Added subscriber: @gentleclockdivider

Added subscriber: @brecht

Added subscriber: @brecht

I suspect this is related to the selection changes but did not try to find the commit.

From what I can tell, lasso select does not work the first time after rotating the view. Then if you do it a second time it works. As if the depth buffer is not updated or something.

I suspect this is related to the selection changes but did not try to find the commit. From what I can tell, lasso select does not work the first time after rotating the view. Then if you do it a second time it works. As if the depth buffer is not updated or something.
Author

It does seem depth buffer related in some cases. Another symptom I just found. In the same .blend file I sent, try the following:

  • Turn off x-ray display
  • In edit mode select all with A
  • Observe that only some of the selected faces are highlighted (it looks like there is some z-fighting going on)
  • Rotate the view with middle mouse drag
  • Observe faces flickering as highlight is only intermittently displayed
  • Release the middle mouse

Observe that only some of the selected faces are highlighted

This is after a rebuild (a couple of hours after the one I originally reported from). Not sure if this is new or I simply didn't notice it before.

It does seem depth buffer related in some cases. Another symptom I just found. In the same .blend file I sent, try the following: - Turn off x-ray display - In edit mode select all with A - Observe that only some of the selected faces are highlighted (it looks like there is some z-fighting going on) - Rotate the view with middle mouse drag - Observe faces flickering as highlight is only intermittently displayed - Release the middle mouse # Observe that only some of the selected faces are highlighted This is after a rebuild (a couple of hours after the one I originally reported from). Not sure if this is new or I simply didn't notice it before.

I don't know which commit resulted in this regression, but it's not related to the recent changes in the selection.
The problem is in the do_lasso_select_mesh function. The data.is_changed variable is not always set to update the mesh.
The solution is simple, but it might be good to investigate which commit has brought this problem.

I don't know which commit resulted in this regression, but it's not related to the recent changes in the selection. The problem is in the `do_lasso_select_mesh` function. The `data.is_changed` variable is not always set to update the mesh. The solution is simple, but it might be good to investigate which commit has brought this problem.

This issue was referenced by 37e3b89506

This issue was referenced by 37e3b89506cfb13fa36fdf765d6ef4763d2bfd43

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63017
No description provided.