Fix T63017: selection via lasso does not work properly in X-ray.

Probably missed in rB40f8ddf8297a.